--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "node test/*.test.js"
+    "test": "tape test/*.test.js"
   },
   "repository": {
     "type": "git",
